# frida-core

./: .gitignore  .gitmodules  CLAUDE.md  Makefile.am  README.md  autogen.sh  config.h.in  config.h.meson  configure.ac  frida  frida-Release.props  frida-core-1.0.pc.in  frida-core.vcxproj  frida-core.vcxproj.filters  frida-gadget.vcxproj  frida-gadget.vcxproj.filters  frida-portal.vcxproj  frida-portal.vcxproj.filters  frida-server.vcxproj  frida-server.vcxproj.filters  frida-web-gateway.vcxproj  frida-web-gateway.vcxproj.filters  frida.props  frida.sln  meson.build  meson.options  meson_options.txt  zed-Debug.props  zed-Debug.vsprops  zed-Release.props  zed-Release.vsprops  zed-core.vcproj  zed-core.vcxproj  zed-core.vcxproj.filters  zed-data.vcproj  zed-gui.vcxproj  zed-gui.vcxproj.filters  zed-server.vcxproj  zed-ui.vcxproj  zed-ui.vcxproj.filters  (+6 more)
compat/: build.py  install-renamed.py  meson.build
data/: Makefile.am  README.txt  agent-session.glade  autogen.py  chat.glade  host-session.glade  login.glade  login.vala  spy.glade  ui.vala  windows.c  workspace.glade
data/agent/: agent.resources
data/gtk/: agent-session.ui  chat.ui  gtk.resources  login.ui  workspace.ui
data/images/: images.resources
data/mx/: default.css  mx.resources
data/ui/: agent-session.ui  host-session.ui  login.ui  ui.resources
data/winjector/: winjector.resources
gadget/: Makefile.am  frida-gadget.version  gadget-glue.c  gadget.vala
inject/: Makefile.am  frida-inject.version  frida-inject.xcent  inject-glue.c  inject-glue.h  inject.vala  meson.build  post-process.sh
ios/: configure.ac
ios/ext/: Makefile.am
ios/src/: Makefile.am  agent-glue.c  agent.vala  fruitjector-glue.c  fruitjector.vala  script-engine.vala  server.vala  system-glue.m  zed-agent-32.vcxproj  zed-agent-32.vcxproj.filters  zed-agent-64.vcxproj  zed-agent-common.props  zid-server.xcent
ios/tests/: Makefile.am  test-fruitjector.vala  test-main.vala  test-system.vala
iphone/: Makefile.am  autogen.sh  configure.ac
iphone/src/: Makefile.am  agent-glue.c  agent.vala  fruitjector-glue.c  fruitjector.vala  server-api.vala  server-glue.c  server.vala  system-glue.c  system.vala
iphone/tests/: Makefile.am  inject-attacker.vala  process-glue.c  process.vala  test-fruitjector.vala  test-main.vala
iphone/vapi/: config.vapi
lib/agent/: Makefile.am  agent-container.vala  agent-glue.c  agent-glue.h  agent.vala  allocator.cpp  frida-agent-32.vcxproj  frida-agent-32.vcxproj.filters  frida-agent-64.vcxproj  frida-agent-64.vcxproj.filters  frida-agent-android.version  frida-agent-common.props  frida-agent-glibc.version  frida-agent-x86.symbols  frida-agent.symbols  frida-agent.version  glog-probe.vala  gmain-watchdog.vala  gst-monitor.vala  libc.c  memory-monitor-engine.vala  meson.build  script-engine.vala  stopwatch-posix.c  stopwatch-windows.c  stopwatch.vala  syscall-linux-arm.S  syscall-linux-arm64.S  syscall-linux-mips.S  syscall-linux-x86.S  zed-agent-32.vcxproj  zed-agent-32.vcxproj.filters  zed-agent-64.vcxproj  zed-agent-64.vcxproj.filters  zed-agent-common.props  zed-agent.def
lib/base/: asset-location.vala  buffer-glue.c  buffer.vala  channel.vala  corefoundation.vala  dbus.vala  frida-atomics.h  frida-atomics.vapi  frida-base-32.vcxproj  frida-base-32.vcxproj.filters  frida-base-64.vcxproj  frida-base-64.vcxproj.filters  frida-base-common.props  frida-darwin.c  frida-darwin.h  frida-jni.h  frida-linux-bpf.h  frida-linux-perf-event.h  frida-linux-syscall.h  frida-linux.vapi  frida-tvos.h  fs.vala  generate-linux-syscall-vala.py  linux-syscall.h  linux-system.vapi  linux.vala  meson.build  p2p-glue.c  p2p.vala  posix.vala  (+11 more)
portal/: frida-portal.version  meson.build  portal.vala  post-process.sh
server/: Makefile.am  frida-server-freebsd.version  frida-server.plist  frida-server.symbols  frida-server.version  frida-server.xcent  meson.build  post-process.sh  server-darwin.h  server-darwin.m  server-glue.c  server-glue.h  server-ios-jit.c  server-ios-jit.defs  server-ios-jit.h  server-ios-tvos.c  server-ios-tvos.h  server-ios.c  server-ios.h  server.vala  sign.sh
src/: Makefile.am  agent-container.vala  agent.resources  android.resources  anti-anti-frida.py  async-task.vala  configuration.vala  control-service.vala  debugger.vala  embed-agent.py  embed-agent.sh  embed-helper.py  embed-helper.sh  embed-loader.sh  endpoint.vala  file-monitor.vala  frida-glue.c  frida-tvos.h  frida.vala  gdb.vala  generate-api-header.py  generate-api.py  helper.resources  host-session-service.vala  loader.resources  meson.build  package-manager.vala  portal-service.vala  post-process-helper.sh  server.plist  server.vala  server.xcent  system-darwin.m  system-linux.c  system-windows.c  system.vala  web-gateway-service.vala  windows-icon-helpers.c  windows-icon-helpers.h  winmain.c  (+6 more)
tests/: Makefile.am  async-harness.vala  dummy.cpp  frida-tests.p12  frida-tests.plist  frida-tests.vcxproj  frida-tests.vcxproj.filters  frida-tests.version  frida-tests.xcent  inject-attacker.c  inject-victim.c  inject-victim.vala  inject-victim.xcent  labrats.vala  main.vala  meson.build  process-resource-usage.c  process-unix.c  process-windows.c  process.vala  profile-compiler.sh  run-android-arm.sh  run-android-arm64.sh  run-android-x86.sh  run-android-x86_64.sh  run-android.sh  run-ios.sh  run-linux-vm.sh  run-linux-x86_64.sh  run-macos.sh  run.py  runner-glue.c  runner.vala  sepol.c  sign.sh  test-agent-glue.c  test-agent.vala  test-code-service.vala  test-compiler.vala  test-fruitjector.vala  (+22 more)
tools/: Makefile.am  compile-js-agent.py  detect-version.py  fixup-project-files-vala-options.py  frida-resource-compiler.vcxproj  frida-resource-compiler.vcxproj.filters  list-project-files-with-vala-code.sh  meson.build  modulate.py  package-server-fruity.sh  package-server-ios.sh  package-server.sh  post-process-module.sh  post-process.py  resource-compiler.vala  resource-compiler.vcproj  resource-compiler.vcxproj  resource-compiler.version  symbolicate.py
web-gateway/: frida-web-gateway.version  meson.build  post-process.sh  web-gateway.vala
(+953 files in other folders)
